Sonar Lint Issue